--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # testing
 /coverage
+/samples
 
 # next.js
 /.next/
@@ -32,3 +33,6 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# vs code
+/.vscode
