--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/lodash": "^4.14.172",
     "@types/react": "^17.0.20",
     "@types/react-router-dom": "^5.1.8",
+    "@vivaxy/png": "^1.3.0",
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
