--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^17.0.20",
     "@types/react-router-dom": "^5.1.8",
     "@vivaxy/png": "^1.3.0",
+    "crc-32": "^1.2.2",
     "lodash": "^4.17.21",
     "next": "11.1.2",
+    "png-chunks": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "typescript": "^4.4.2"
